vlib/v/checker/tests/no_interface_instantiation_c.out
vlib/v/checker/tests/no_interface_instantiation_c.v:9:9: error: cannot instantiate interface `Speaker`
    7 | fn main() {
    8 |     my_fn(
    9 |         speak: 1
      |         ~~~~~~~~
   10 |     )
   11 | }